# acarus

./: .gitignore  .gitignore.example  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  README.md  Tiltfile  acarus.code-workspace  docker-compose.dev.yml  docker-compose.yml  loki-config.yml  promtail-config.yml
.cursor/: mcp.json
docs/: AWS_DEPLOYMENT_GUIDE.md  CURSOR_MULTI_REPO_WORKFLOW.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_REF.md  GIT_SUBMODULES_VS_SEPARATE_REPOS.md  PIPELINE_SETUP.md  QUICK_START_CI.md  README_CI.md  REPO_SPLIT_GUIDE.md  SETUP_COMPLETE.md  SHARED_FILES_STRATEGY.md  START_HERE.md  UBUNTU_SERVER_DEPLOYMENT.md  WHY_DOCKER_COMPOSE.md  WORKSPACE_SETUP.md  logql.md
frontend/: .dockerignore  Dockerfile  (+13 more)
receipt_processor/: .dockerignore  Cargo.toml  Dockerfile  README.md  Receipt_Processor.postman_collection.json  Receipt_Processor.postman_environment.json  Receipt_Processor_Tests.postman_collection.json
receipt_processor/migrations/: 001_create_receipts_table.sql  002_add_users_and_auth.sql  003_seed_test_data.sql  004_add_receipts_to_15_per_user.sql  005_add_phone_number_to_users.sql  README.md
receipt_processor/src/: lib.rs  main.rs
receipt_processor/src/database/: connection.rs  redis.rs
receipt_processor/src/handlers/: auth_handlers.rs  mod.rs  receipt_handlers.rs
receipt_processor/src/middleware/: auth_middleware.rs
receipt_processor/src/models/: auth.rs  mod.rs  receipt.rs
receipt_processor/src/services/: auth_service.rs  mod.rs  receipt_service.rs
receipt_processor/src/utils/: auth_extractor.rs  auth_helper.rs  mod.rs
(+77 files in other folders)
