[package]
name = "receipt_processor"
version = "0.1.0"
edition = "2021"
default-run = "receipt_processor"

[dependencies]
# Web framework
axum = "0.8"
async-trait = "0.1"
# Async runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Postgres
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
dotenvy = "0.15.7"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
jsonwebtoken = "9"
bcrypt = "0.17.1"
tower-http = { version = "0.6.6", features = ["auth", "cors"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sha2 = "0.10"
